--- a/design/planning.html
+++ b/design/planning.html
@@ -82,8 +82,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="gallery">
-                                <div class="photo-block">
-                                    <a href=""><img src="img/1.jpg" alt=""></a>
+                                <div class="thumbnail portrait">
+                                    <img src="img/1.jpg" alt="">
                                 </div>
                                 <div class="photo-block">item 2</div>
                                 <div class="photo-block">item 3</div>
