--- a/design/planning.html
+++ b/design/planning.html
@@ -52,22 +52,28 @@
                             Photo System
                         </div>
                     </div>
-                    <nav class="menu">
-                        <ul class="nav metismenu">
-                            <li class="active">
-                                <a href="#"> <i class="fa fa-building-o"></i>Счет</a>
-                            </li>
-                            <li>
-                                <a href="#"> <i class="fa fa-flash"></i>История</a>
-                            </li>
-                            <li>
-                                <a href="#"> <i class="fa fa-archive"></i>Планирование</a>
-                            </li>
-                            <li>
-                                <a href="#"> <i class="fa fa-plus-square"></i>Запись</a>
-                            </li>
-                        </ul>
-                    </nav>
+                    <hr>
+                    <div class="menu gallery-filter">
+                        <form>
+                            <div class="form-group">
+                                <label ><span class="fa fa-camera"></span> Product</label>
+                                <input type="text" class="form-control" />
+                            </div>
+
+                            <div class="form-group">
+                                <label ><span class="fa fa-bank"></span> Store</label>
+                                <input type="text" class="form-control" />
+                            </div>
+
+                            <div class="form-group">
+                                <label ><span class="fa fa-location-arrow"></span> Location</label>
+                                <input type="text" class="form-control" />
+                            </div>
+                        </form>
+                    </div>
+                    <div>
+                        <button class="btn btn-success">NEW UPLOAD</button>
+                    </div>
                 </div>
             </aside>
             <!--SIDEBAR-->
@@ -82,20 +88,175 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="gallery">
-                                <div class="thumbnail portrait">
-                                    <img src="img/1.jpg" alt="">
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
                                 </div>
-                                <div class="photo-block">item 2</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
-                                <div class="photo-block">item 3</div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+                                <div class="photo-block">
+                                    <div class="thumbnail portrait">
+                                        <a href=""><img src="img/1.jpg" alt=""></a>
+                                    </div>
+                                    <div class="tags">
+                                        <div class="tag"><a href="">tag 1</a></div>
+                                        <div class="tag"><a href="">tag 2</a></div>
+                                        <div class="tag"><a href="">tag 3</a></div>
+                                    </div>
+
+                                </div>
+
+
+
+
                             </div>
                         </div>
                     </div>
