--- a/design/upload.html
+++ b/design/upload.html
@@ -13,6 +13,10 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
+
 </head>
 
 <body>
@@ -75,17 +79,39 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="upload-gallery-container">
-                            <div>
+                            <div class="col-md-6 text-center">
                                 <div>
-                                    <img id="blah" src="http://placehold.it/180" alt="your image" />
+                                    <img id="blah" style="width: 200px;" src="http://placehold.it/180" alt="your image" />
                                 </div>
-                                <div>
-                                    <input type='file' onchange="readURL(this);" />
+                                <div style="margin-top: 20px;">
+                                    <!--<input type='file' onchange="readURL(this);" />-->
+                                    <div class="file-upload">
+                                        <label for="upload" class="file-upload__label">Upload</label>
+                                        <input id="upload" class="file-upload__input" type="file" name="file-upload" onchange="readURL(this);">
+                                    </div>
 
                                 </div>
                             </div>
-                            <div>
+                            <div class="col-md-6">
+                                <form>
+                                    <div class="form-group">
+                                        <label ><span class="fa fa-camera"></span> Product</label><br>
+                                        <input type="text" class="form-control"  data-role="tagsinput" value="İstanbul, Adıyaman, Adana, Urfa" />
+                                    </div>
 
+                                    <div class="form-group">
+                                        <label ><span class="fa fa-bank"></span> Store</label><br>
+                                        <input type="text" class="form-control"  data-role="tagsinput" value="İstanbul, Adıyaman, Adana, Urfa" />
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label ><span class="fa fa-location-arrow"></span> Location</label><br>
+                                        <input type="text" class="form-control"  data-role="tagsinput" value="İstanbul, Adıyaman, Adana, Urfa" />
+                                    </div>
+
+                                    <button type="submit" class="btn btn-primary">Upload and Save</button>
+
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -97,8 +123,9 @@
             function readURL(input) {
                 if (input.files && input.files[0]) {
                     var reader = new FileReader();
-
+                    console.log("test");
                     reader.onload = function (e) {
+                        console.log("test2");
                         $('#blah')
                             .attr('src', e.target.result);
                     };
